[Mac] Fix autoresizing mask for full-screen windows controls

BUG=664807

Review-Url: https://codereview.chromium.org/2503533002
Cr-Commit-Position: refs/heads/master@{#432025}

Former-commit-id: f27907f882cfa0074ed0ed5e023508aae6bd6f1c